--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
   About Me: "aboutme"
   Resources:
     - La meilleur recette de pâte à crèpe: "https://www.marmiton.org/recettes/recette_pate-a-crepes_12372.aspx"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+    - Where to find the 7 dragon balls: "7_dragon_ball"
 
 
 ################
@@ -32,7 +32,6 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-#TODO change avatar
 # avatar: "/assets/img/banana.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
@@ -40,8 +39,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#TODO
-title-img: "/assets/img/banana.png"
+title-img: "/assets/img/avatar.jpeg"
 
 #####################################
 # --- Footer social media links --- #
@@ -122,12 +120,11 @@ navbar-var-length: false
 ######################################
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
-#TODO
-navbar-col: # using image
+navbar-col: "#000000" # using image
 navbar-text-col: "#ffd1dc" # "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-border-col: "#000000"
 page-col: "#f2e3e5" # "#FFFFFF"
-text-col: "#080808" # "#404040"
+text-col: "#FFFFFF" # "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#EAEAEA"
@@ -138,10 +135,9 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "assets/img/endless-constellation.svg"
-footer-img: "assets/img/endless-constellation.svg"
-#TODO
-#page-img: "assets/img/liquid-cheese.svg"
+navbar-img: "assets/img/navbar.svg"
+footer-img: "assets/img/footer.svg"
+page-img: "assets/img/page.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
