--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ footer-hover-col: "#0085A1"
 
 navbar-img: "assets/img/navbar.svg"
 footer-img: "assets/img/footer.svg"
-page-img: "assets/img/page.png"
+page-img: "assets/img/page.svg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
