--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .DS_Store
 Gemfile.lock
+
+#posts
+2023-07-21-ITER_project.md
+2023-07-03-RNN2Transformers.md
+2023-07-03-Lex-Fridman.md
+2023-07-10-sujetphilo.md
+2023-07-10-heureux.md
