--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ Gemfile.lock
 
 #posts
 2023-07-21-ITER_project.md
-2023-07-03-RNN2Transformers.md
+# 2023-07-03-RNN2Transformers.md
 2023-07-03-Lex-Fridman.md
 2023-07-10-sujetphilo.md
 2023-07-10-heureux.md
